TSK-3240 -- TrustServerCertificate в строке подключения админки

--- a/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageDecision.RequestDigitalSignature_PR.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageDecision.RequestDigitalSignature_PR.adoc
@@ -15,4 +15,4 @@ public bool RequestDigitalSignature { get; set; }
 Значение свойства::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- для завершения требуется подписание ЭЦП; иначе -- `false`
+`true` -- для завершения требуется подписание ЭП; иначе -- `false`
