--- a/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignaturePart_CL.adoc
+++ b/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignaturePart_CL.adoc
@@ -1,6 +1,6 @@
 = BaseCardSignaturePart -- класс
 
-Представляет часть ЭЦП.
+Представляет часть ЭП.
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
