--- a/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
+++ b/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
@@ -1,6 +1,6 @@
 = BaseCardSignature -- класс
 
-Содержит данные ЭЦП установленной на карточку.
+Содержит данные ЭП, установленной на карточку.
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
