--- a/modules/BackOffice-ObjectModel-Mapping/pages/ObjectModel_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Mapping/pages/ObjectModel_NS.adoc
@@ -28,8 +28,8 @@
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty_CL.adoc[BaseCardProperty]` |Предоставляет доступ к коллекции `BaseCardPropertyField`.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardPropertyField_CL.adoc[BaseCardPropertyField]` |Представляет описание ссылочного поля.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardSectionRow_CL.adoc[BaseCardSectionRow]` |Базовый класс для представления строки секции карточки.
-|`xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]` |Содержит данные ЭЦП установленной на карточку.
-|`xref:BackOffice-ObjectModel-BaseCard:BaseCardSignaturePart_CL.adoc[BaseCardSignaturePart]` |Представляет часть ЭЦП.
+|`xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]` |Содержит данные ЭП установленной на карточку.
+|`xref:BackOffice-ObjectModel-BaseCard:BaseCardSignaturePart_CL.adoc[BaseCardSignaturePart]` |Представляет часть ЭП.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardSystemInfo_CL.adoc[BaseCardSystemInfo]` |Содержит системную информацию карточки (секция "Системные свойства").
 |`xref:BackOffice-ObjectModel-BaseUniversal:BaseDictionaryCard_CL.adoc[BaseDictionaryCard]` |Базовый класс для справочников библиотеки _{bo}_.
 |`xref:BackOffice-ObjectModel-BaseUniversal:BaseUniversal_CL.adoc[BaseUniversal]` |Объектная модель _Конструктора справочников_.
