--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.AddSignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.AddSignature_MT.adoc
@@ -36,7 +36,7 @@ cardState:::
 Возвращаемое значение::
 Тип: `xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]`
 +
-Объект содержащий полную информацию по установленной ЭЦП
+Объект содержащий полную информацию по установленной ЭП
 
 == Исключения
 
