--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService_IN.adoc
@@ -18,7 +18,7 @@ public interface IBaseCardService
 |===
 |Имя |Описание
 |`xref:IBaseCardService.AddBusinessProcess_MT.adoc[AddBusinessProcess(BaseCard, Guid, KindsCardProcess)]` |Добавляет к карточке бизнес-процесс с переданным идентификатором.
-|`xref:IBaseCardService.AddSignature_MT.adoc[AddSignature(SignatureList, X509Certificate2, String, StatesState)]` |Добавляет в переданный список подписей ЭЦП.
+|`xref:IBaseCardService.AddSignature_MT.adoc[AddSignature(SignatureList, X509Certificate2, String, StatesState)]` |Добавляет в переданный список подписей ЭП.
 |`xref:IBaseCardService.AddSignaturePart_MT.adoc[AddSignaturePart(BaseCardSignature, Guid, Byte[\], String, Guid, Guid, BaseCard)]` |Инициализирует и добавляет в указанную подпись часть подписи.
 |`xref:IBaseCardService_AddSignaturePart_1_MT.adoc[AddSignaturePart(BaseCardSignature, Guid, Byte[\], String, Guid, Guid, BaseCard, DateTime?, BaseCardSignaturePartStatus)]` |Инициализирует и добавляет в указанную подпись часть подписи, прошедшую проверку валидности.
 |`xref:IBaseCardService.CanStartBusinessProcess_MT.adoc[CanStartBusinessProcess(BaseCard, KindsCardProcess)]` |Проверяет допустимость запуска бизнес-процесса и возвращает объект, содержащий ошибку.
