--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignature_MT.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.AddSignature -- метод (Document, X509Certificate2, Boolean, ICollection<CardFieldSetting>)
 
-Добавляет новую подпись в список подписей карточки и устанавливает ЭЦП на поля, основные и дополнительные файлы документа.
+Добавляет новую подпись в список подписей карточки и устанавливает ЭП на поля, основные и дополнительные файлы документа.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
