--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_3_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_3_MT.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.AddSignatures -- метод (Document, SignedCms, bool)
 
-Добавляет коллекцию новых подписей в список подписей карточки. Устанавливает ЭЦП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`. Позволяет проверять срок действия добавляемых подписей.
+Добавляет коллекцию новых подписей в список подписей карточки. Устанавливает ЭП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`. Позволяет проверять срок действия добавляемых подписей.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
