--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckActualSignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckActualSignature_MT.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.CheckActualSignature -- метод (Document, ICollection<CardFieldSetting>, BaseCardSignature)
 
-Определяет актуальность ЭЦП по отношению к данным документа.
+Определяет актуальность ЭП по отношению к данным документа.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -26,7 +26,7 @@ fields:::
 signature:::
 Тип: `xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]`
 +
-ЭЦП, для которой производится проверка
+ЭП, для которой производится проверка
 
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
@@ -35,7 +35,7 @@ signature:::
 
 == Заметки
 
-Данный метод проверяет части указанной подписи на соответствие текущим данным (версия основного файла) документа, без верификации самой ЭЦП.
+Данный метод проверяет части указанной подписи на соответствие текущим данным (версия основного файла) документа, без проверки подлинности самой ЭП.
 
 == Примеры
 
