--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckAllMainFilesSigned_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckAllMainFilesSigned_MT.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.CheckAllMainFilesSigned -- метод (Document, BaseCardSignature)
 
-Определяет корректность ЭЦП, установленной на основных файлах документа.
+Определяет корректность ЭП, установленной на основных файлах документа.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -21,7 +21,7 @@ document:::
 signature:::
 Тип: `xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]`
 +
-Подпись карточки, содержащая актуальные ЭЦП
+Подпись карточки, содержащая актуальные ЭП
 
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
