--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.SignatureAdded_EV.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.SignatureAdded_EV.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.SignatureAdded -- событие
 
-Событие срабатывает после подписания документ ЭЦП.
+Событие срабатывает после подписания документа с помощью ЭП.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
