--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignatureToCardReconcileLog_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignatureToCardReconcileLog_MT.adoc
@@ -1,6 +1,6 @@
 = ITaskService.AddSignatureToCardReconcileLog -- метод (Task, X509Certificate2)
 
-Подписывает ЭЦП карточку хода согласования.
+Подписывает при помощи ЭП карточку хода согласования.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
