--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignature_MT.adoc
@@ -1,6 +1,6 @@
 = ITaskService.AddSignature -- метод (Task, X509Certificate2, StatesOperation, Guid, IEnumerable<CardFieldSetting>)
 
-Данный метод добавляет новую подпись в список подписей карточки _Задание_, и устанавливает ЭЦП на указанные поля карточки.
+Данный метод добавляет новую подпись в список подписей карточки _Задание_, и устанавливает ЭП на указанные поля карточки.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
