--- a/modules/Platform-ObjectManager-CardManager/pages/CryptObjectType_EN.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CryptObjectType_EN.adoc
@@ -17,6 +17,6 @@ public enum CryptObjectType
 [cols=",",options="header"]
 |===
 |Имя члена |Описание
-|`Signature` |Подпись (ЭЦП).
+|`Signature` |Подпись (ЭП).
 |`Key` |Публичный ключ шифрования.
 |===
