--- a/modules/cards/pages/bo-lib/document.adoc
+++ b/modules/cards/pages/bo-lib/document.adoc
@@ -3,7 +3,7 @@
 [cols=","]
 |===
 |Назначение
-|Карточки данного типа предназначены для работы с файлами: хранения файлов в различных форматах, предварительный просмотр, учет версий, экспорта в различные форматы, наложение электронно-цифровых подписей в формате `.p7s`.
+|Карточки данного типа предназначены для работы с файлами: хранения файлов в различных форматах, предварительный просмотр, учет версий, экспорта в различные форматы, наложение электронных подписей в формате `.p7s`.
 
 |Класс карточки
 |`xref:BackOffice-ObjectModel-Document:Document_CL.adoc[DocsVision.BackOffice.ObjectModel.Document]`
