--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -90,7 +90,7 @@ CardManager cardManager = userSession.CardManager;
 |Определяет функции получения списка ролей и доступных операций сотрудника в пределах заданной карточки. Предоставляет методы сброса кэша ролевой модели.
 
 |`xref:BackOffice-ObjectModel-Services-IBaseCardService:IBaseCardService_IN.adoc[IBaseCardService]`
-|Предоставляет методы установки и проверки ЭЦП, генерации дайджеста и управления бизнес-процессом.
+|Предоставляет методы установки и проверки ЭП, генерации дайджеста и управления бизнес-процессом.
 
 |`xref:BackOffice-ObjectModel-Services-ILockService:ILockService_IN.adoc[ILockService]`
 |Позволяет управлять состоянием блокировки объектов, получать информацию о текущем состоянии и владельце блокировки.
