--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
@@ -24,12 +24,12 @@ public interface IDocumentService
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddMainFileComment_MT.adoc[AddMainFileComment(Document, DocumentFile, String)]` |Добавляет комментарий к основному файлу документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddMainFiles_MT.adoc[AddMainFiles(Document document, IEnumerable<String>)]` |Добавляет несколько основных файлов в документ.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddMainFileVersionComment_MT.adoc[AddMainFileVersionComment(Document, DocumentFile, Guid, String)]` |Добавляет комментарий к указанной версии основного файла документа.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignature_MT.adoc[AddSignature(Document, X509Certificate2, Boolean, ICollection<CardFieldSetting>)]` |Добавляет новую подпись в список подписей карточки и устанавливает ЭЦП на поля, основные и дополнительные файлы документа.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignature_MT.adoc[AddSignature(Document, X509Certificate2, Boolean, ICollection<CardFieldSetting>)]` |Добавляет новую подпись в список подписей карточки и устанавливает ЭП на поля, основные и дополнительные файлы документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignature_1_MT.adoc[AddSignature(Document, X509Certificate2, SignatureLabel, StaffEmployee, String, Boolean, ICollection<CardFieldSetting>)]` |Данный метод предназначен для выполнения подписания операции в документе.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignatures_MT.adoc[AddSignatures(Document, `SignedCms`)]` |Данный метод добавляет коллекцию новых подписей в список подписей карточки, и устанавливает ЭЦП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignatures_MT.adoc[AddSignatures(Document, `SignedCms`)]` |Данный метод добавляет коллекцию новых подписей в список подписей карточки, и устанавливает ЭП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService_AddSignatures_1_MT.adoc[AddSignatures -- метод (Document, DocumentFile, `SignedCms`)]` |Добавляет коллекцию новых подписей в список подписей карточки. Определяет, к какому файлу будет добавлена подпись. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignatures_2_MT.adoc[AddSignatures -- метод (Document, DocumentFile, `SignedCms`, bool)]` |Добавляет коллекцию новых подписей в список подписей карточки. Определяет, к какому файлу будет добавлена подпись. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`. Позволяет проверять срок действия добавляемых подписей.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignatures_3_MT.adoc[AddSignatures -- метод (Document, `SignedCms`, bool)]` |Добавляет коллекцию новых подписей в список подписей карточки. Устанавливает ЭЦП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`. Позволяет проверять срок действия добавляемых подписей.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignatures_3_MT.adoc[AddSignatures -- метод (Document, `SignedCms`, bool)]` |Добавляет коллекцию новых подписей в список подписей карточки. Устанавливает ЭП на поля, основные и дополнительные файлы документа. Позволяет использовать для подписания криптографическое сообщение типа `SignedCms`. Позволяет проверять срок действия добавляемых подписей.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.ApplyKindSettings_1_MT.adoc[ApplyKindSettings(Document, DocumentSetting)]` |Устанавливает у документа определённые настройки вида карточки.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.ApplyKindSettings_MT.adoc[ApplyKindSettings(Document, KindsCardKind)]` |Устанавливает у документа настройки указанного вида карточки.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AttachMainFile_MT.adoc[AttachMainFile(Document, String)]` |Загружает в документ основной файл.
@@ -51,8 +51,8 @@ public interface IDocumentService
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CanUnlockMainFile_MT.adoc[CanUnlockMainFile(Document, DocumentFile)]` |Определяет возможность разблокировки определённого основного файла документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CanUnlockMainFile_1_MT.adoc[CanUnlockMainFile(Document, DocumentFile, LockStatus)]` |Определяет возможность разблокировки определённого основного файла документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CanUnlockMainFile_2_MT.adoc[CanUnlockMainFile(Document, DocumentFile, String)]` |Определяет возможность разблокировки определённого основного файла документа.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CheckActualSignature_MT.adoc[CheckActualSignature(Document, ICollection<CardFieldSetting>, BaseCardSignature)]` |Определяет актуальность ЭЦП по отношению к данным документа.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CheckAllMainFilesSigned_MT.adoc[CheckAllMainFilesSigned(Document, BaseCardSignature)]` |Определяет корректность ЭЦП, установленной на основных файлах документа.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CheckActualSignature_MT.adoc[CheckActualSignature(Document, ICollection<CardFieldSetting>, BaseCardSignature)]` |Определяет актуальность ЭП по отношению к данным документа.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CheckAllMainFilesSigned_MT.adoc[CheckAllMainFilesSigned(Document, BaseCardSignature)]` |Определяет корректность ЭП, установленной на основных файлах документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CheckMainFileSigned_MT.adoc[CheckMainFileSigned(Document, DocumentFile)]` |Определяет наличие подписи у указанного основного файла документ.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.ComputeAttachmentSignature_MT.adoc[ComputeAttachmentSignature(Document, BaseCardSignature, X509Certificate2)]` |Подписывает дополнительные файлы документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.ComputeFieldsSignature_MT.adoc[ComputeFieldsSignature(Document, BaseCardSignature, X509Certificate2, ICollection<CardFieldSetting>)]` |Подписывает атрибуты документа.
@@ -101,16 +101,16 @@ public interface IDocumentService
 |`HasLockedMainFile(DocumentFile)` |Возвращает `true`, если основной файл выгружен для редактирования, либо заблокирован владельцем сессии.
 |`HasLockedMainFile(DocumentFile, LockStatus)` |Возвращает true, если основной файл выгружен для редактирования, либо заблокирован владельцем сессии. Текущий статус блокировки файла указывается принудительно.
 |`HasMainFile(DocumentFile)` |Определяет, что указанный файл документа является основным файлом.
-|`IsDocumentSignaturePartAttachments(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭЦП подписан дополнительный файл.
-|`IsDocumentSignaturePartFields(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭЦП подписаны поля карточки.
-|`IsDocumentSignaturePartMainFile(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭЦП подписан основной файл.
+|`IsDocumentSignaturePartAttachments(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭП подписан дополнительный файл.
+|`IsDocumentSignaturePartFields(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭП подписаны поля карточки.
+|`IsDocumentSignaturePartMainFile(BaseCardSignaturePart)` |Возвращает `true`, если переданной частью ЭП подписан основной файл.
 |`IsEncodedSignedDocument(String)` |Определяет соответствие указанного файла криптографическому сообщению CMS/PKCS 7.
 |`IsFileNotEmpty(Document, DocumentFile)` |Возвращает true, если файл документа не нулевой.
 |`LockMainFile(Document, DocumentFile)` |Выгружает файл карточки и ставит постоянную блокировку.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.LockMainFile_MT.adoc[LockMainFile(Document, DocumentFile, String)]` |Выгружает файл из документа на диск с установкой постоянной блокировки.
 |`MakeCurrentMainFileVersion(Document, DocumentFile, Guid)` |Задаёт последнюю версию файла.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.MakeLockedMainFileForceChanged_MT.adoc[MakeLockedMainFileForceChanged(Document, DocumentFile)]` |Устанавливает признака наличия изменений для выгруженного основного файла документа.
-|`PrepareToVerifySignature(Document, IDictionary<BaseCardSignaturePart, Stream>, IEnumerable<BaseCardSignaturePart>, Boolean, Boolean, ICollection<CardFieldSetting>)` |Заполняет коллекцию `IDictionary<BaseCardSignaturePart, Stream>`, где ключ соответствует части ЭЦП, а значение коллекции -- сопоставленные частям ЭЦП значения полей, основных или дополнительных файлов.
+|`PrepareToVerifySignature(Document, IDictionary<BaseCardSignaturePart, Stream>, IEnumerable<BaseCardSignaturePart>, Boolean, Boolean, ICollection<CardFieldSetting>)` |Заполняет коллекцию `IDictionary<BaseCardSignaturePart, Stream>`, где ключ соответствует части ЭП, а значение коллекции -- сопоставленные частям ЭП значения полей, основных или дополнительных файлов.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.PurgeFileCache_MT.adoc[PurgeFileCache(Document)]` |Очищает кэш файлов документ.
 |`RemoveAdditionalFile(Document, DocumentFile)` |Удаляет заданный дополнительный файл из документа.
 |`RemoveMainFile(Document, DocumentFile)` |Удаляет заданный основной файл из документа.
@@ -129,7 +129,7 @@ public interface IDocumentService
 |`UnlockMainFile(Document, DocumentFile, String)` |Разблокирует файл, расположенный по заданному пути. В случае наличия изменений в файле документа, увеличивает номер версии.
 |`UnlockMainFile(Document, DocumentFile, Int32, String, Boolean)` |Разблокирует файл. В случае наличия изменений в файле документа, увеличивает номер версии. К файлу или версии файла добавляется комментарий.
 |`UnlockMainFile(Document, DocumentFile, Int32, String, Boolean, String)` |Разблокирует файл, расположенный по заданному пути. В случае наличия изменений в файле документа, увеличивает номер версии. К файлу или версии файла добавляется комментарий.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.VerifySignature_MT.adoc[VerifySignature(Document, BaseCardSignature, X509Certificate2, Boolean, Boolean, ICollection<CardFieldSetting>)]` |Выполняет проверку ЭЦП, установленной на документе, файлах документа или полях, и возвращает результат проверки.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.VerifySignature_MT.adoc[VerifySignature(Document, BaseCardSignature, X509Certificate2, Boolean, Boolean, ICollection<CardFieldSetting>)]` |Выполняет проверку ЭП, установленной на документе, файлах документа или полях, и возвращает результат проверки.
 |===
 
 == События
@@ -146,6 +146,6 @@ public interface IDocumentService
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.MainFileRemoved_EV.adoc[MainFileRemoved]` |Событие срабатывает после удаления основного файла.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.MainFileUnlocked_EV.adoc[MainFileUnlocked]` |Событие срабатывает после разблокировки основного файла.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.MainFileUnlocking_EV.adoc[MainFileUnlocking]` |Вызывается до разблокировки основного файла.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.SignatureAdded_EV.adoc[SignatureAdded]` |Событие срабатывает после подписания документ ЭЦП.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.SignatureAdded_EV.adoc[SignatureAdded]` |Событие срабатывает после подписания документ ЭП.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.SynchronizationFromFileCompleted_EV.adoc[SynchronizationFromFileCompleted]` |Событие срабатывает после синхронизации данных карточки со свойствами основного файла.
 |===
