--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.FindDeputiesWhereEmployeeIsDeputy_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.FindDeputiesWhereEmployeeIsDeputy_MT.adoc
@@ -37,7 +37,7 @@ employee:::
 
 == Примеры
 
-Ниже приведён пример использования сервиса для отбора прав у текущего сотрудника, позволяющих ему, как заместителю другого сотрудника, выполнять подписание документов ЭЦП.
+Ниже приведён пример использования сервиса для отбора прав у текущего сотрудника, позволяющих ему, как заместителю другого сотрудника, выполнять подписание документов ЭП.
 
 [source,csharp]
 ----
