--- a/modules/BackOffice-ObjectModel-Staff/pages/StaffDeputy_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Staff/pages/StaffDeputy_CL.adoc
@@ -24,7 +24,7 @@ public class StaffDeputy : ObjectBase
 |`ParentEmployee` |Задаёт или возвращает замещаемого сотрудника.
 |`Performing` |Задаёт или возвращает признак того, что заместитель имеет право исполнять те задания, предназначенные для замещаемого им (неактивного) сотрудника, в которых тот является рядовым исполнителем.
 |`Permanent` |Задаёт или возвращает признак того, что заместитель может находить, просматривать и исполнять задания замещаемого, даже если основной исполнитель активен и сам его исполняет.
-|`Signature` |Задаёт или возвращает признак того, что заместитель имеет право подписывать документ ЭЦП от имени замещаемого им сотрудника.
+|`Signature` |Задаёт или возвращает признак того, что заместитель имеет право подписывать документ ЭП от имени замещаемого им сотрудника.
 |`SignatureComment` |Задаёт или возвращает текст, которым сопровождается подпись заместителя в документах, подписываемых им за замещаемого сотрудника.
 |===
 
