ERR-2469 -- CardTypeExtractor быть не должно вообще

--- a/modules/samples/pages/solution/card-sql-package.adoc
+++ b/modules/samples/pages/solution/card-sql-package.adoc
@@ -71,10 +71,10 @@
 ----
 Replace="1" если карточка должна заменить существующую, `0` -- если дополнить.
 
-[NOTE]
-====
-Если для выгрузки данных использовалась утилита _CardTypeExtractor_, то файл `CardPackage.xml` будет сформирован автоматически, но в него потребуется добавить записи о карточках, выгруженных из _{wincl}а_ самостоятельно.
-====
+// [NOTE]
+// ====
+// Если для выгрузки данных использовалась утилита _CardTypeExtractor_, то файл `CardPackage.xml` будет сформирован автоматически, но в него потребуется добавить записи о карточках, выгруженных из _{wincl}а_ самостоятельно.
+// ====
 
 == Создание "SqlPackage"
 
