--- a/modules/samples/pages/solution/create-solution.adoc
+++ b/modules/samples/pages/solution/create-solution.adoc
@@ -37,7 +37,7 @@
 +
 [NOTE]
 ====
-Все сборки {dv}, использованные в проектах решения, устанавливаются вместе с {dv} {wincl} и платформой Docsvision.
+Все сборки {dv}, использованные в проектах решения, устанавливаются вместе с {dv} {wincl} и платформой {dv}.
 ====
 +
 * `Binaries` -- каталог для размещения готовых сборок.
@@ -50,7 +50,7 @@
 * `NetstatSolutionCard` -- каталог с проектом компонента карточки, а также его объектной моделью.
 * `NetstatSolutionClientInstaller` -- каталог с проектом пакета установки клиентской части _решения_.
 * `NetstatSolutionInstaller` -- каталог с проектом пакета установки серверной части _решения_.
-* `Other` -- в данном каталоге содержится утилита _CardTypeExtractor_, которая будет использована на этапе xref:solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
+// * `Other` -- в данном каталоге содержится утилита _CardTypeExtractor_, которая будет использована на этапе xref:solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
 
 [NOTE]
 ====
